--- a/index.html
+++ b/index.html
@@ -78,10 +78,6 @@
 										vacations, accommodations, restaurants, and hotels. Built on the secure BEP20
 										protocol, it ensures fast, secure, and seamless transactions for travelers
 										worldwide.</p>
-									<ul class="btns">
-										<li><a class="gradient theme-btn" href="#" title="">Sign up to Join</a></li>
-										<li><a class="theme-btn blank" href="#" title="">Token Distribution</a></li>
-									</ul>
 									<div class="social">
 										<a href="#" title=""><i class="fa fa-facebook"></i></a>
 										<a href="#" title=""><i class="fa fa-twitter"></i></a>
@@ -91,7 +87,23 @@
 									</div>
 								</div>
 								<div class="fimg animute wow fadeIn" data-wow-delay="0.2s">
-									<img src="images/resource/mockup1.png" alt="" />
+									<ul class="btns">
+										<li><a class="gradient theme-btn"
+												href="https://bscscan.com/address/0xB25Aba04df6E2DD03B236ae1A025ed21328f2AF8"
+												title="">Contract:
+												0xB25Aba04df6E2DD03B236ae1A025ed21328f2AF8</a></li>
+										<li class="mt-2"><a class="theme-btn blank"
+												href="https://bscscan.com/address/0xeda224345ccfe36f2fa0ae1ad32c474a5beef699"
+												title="">Wallet:
+												0xeda224345ccfe36f2fa0ae1ad32c474a5beef699</a></li>
+										<li class="mt-2">
+											<a class="gradient theme-btn" href="mailto:easytripcointech@gmail.com"
+												title="Email us">Email: easytripcointech@gmail.com</a>
+										</li>
+										<li class="mt-2"><a class="theme-btn blank"
+												href="https://telegram.me/Easytripcoin" title="">Telegram:
+												Easytripcoin</a></li>
+									</ul>
 								</div>
 							</div>
 							<div class="clsec" id="five">
