--- a/index.html
+++ b/index.html
@@ -86,25 +86,23 @@
 										<a href="#" title=""><i class="fa fa-bitcoin"></i></a>
 									</div>
 								</div>
-								<div class="fimg animute wow fadeIn" data-wow-delay="0.2s">
-									<ul class="btns">
-										<li><a class="gradient theme-btn"
-												href="https://bscscan.com/address/0xB25Aba04df6E2DD03B236ae1A025ed21328f2AF8"
-												title="">Contract:
-												0xB25Aba04df6E2DD03B236ae1A025ed21328f2AF8</a></li>
-										<li class="mt-2"><a class="theme-btn blank"
-												href="https://bscscan.com/address/0xeda224345ccfe36f2fa0ae1ad32c474a5beef699"
-												title="">Wallet:
-												0xeda224345ccfe36f2fa0ae1ad32c474a5beef699</a></li>
-										<li class="mt-2">
-											<a class="gradient theme-btn" href="mailto:easytripcointech@gmail.com"
-												title="Email us">Email: easytripcointech@gmail.com</a>
-										</li>
-										<li class="mt-2"><a class="theme-btn blank"
-												href="https://telegram.me/Easytripcoin" title="">Telegram:
-												Easytripcoin</a></li>
-									</ul>
-								</div>
+								<ul class="btns">
+									<li><a class="gradient theme-btn"
+											href="https://bscscan.com/address/0xB25Aba04df6E2DD03B236ae1A025ed21328f2AF8"
+											title="">Contract:
+											0xB25Aba04df6E2DD03B236ae1A025ed21328f2AF8</a></li>
+									<li class="mt-2"><a class="theme-btn blank"
+											href="https://bscscan.com/address/0xeda224345ccfe36f2fa0ae1ad32c474a5beef699"
+											title="">Wallet:
+											0xeda224345ccfe36f2fa0ae1ad32c474a5beef699</a></li>
+									<li class="mt-2">
+										<a class="gradient theme-btn" href="mailto:easytripcointech@gmail.com"
+											title="Email us">Email: easytripcointech@gmail.com</a>
+									</li>
+									<li class="mt-2"><a class="theme-btn blank" href="https://telegram.me/Easytripcoin"
+											title="">Telegram:
+											Easytripcoin</a></li>
+								</ul>
 							</div>
 							<div class="clsec" id="five">
 								<div class="cl wow fadeIn" data-wow-delay="0s"> <a href="#" title=""><img
