--- a/index.html
+++ b/index.html
@@ -78,29 +78,26 @@
 										vacations, accommodations, restaurants, and hotels. Built on the secure BEP20
 										protocol, it ensures fast, secure, and seamless transactions for travelers
 										worldwide.</p>
-									<div class="social">
-										<a href="#" title=""><i class="fa fa-facebook"></i></a>
-										<a href="#" title=""><i class="fa fa-twitter"></i></a>
-										<a href="#" title=""><i class="fa fa-youtube"></i></a>
-										<a href="#" title=""><i class="fa fa-github"></i></a>
-										<a href="#" title=""><i class="fa fa-bitcoin"></i></a>
-									</div>
 								</div>
+								<p class="text-light">Below is the wallet address where you can send your payment to buy
+									the ETC token. You can also copy the token contract address below to set it up in
+									your BEP20 wallet. For complete details, Please email us or just chat with our
+									telegram support team.</p>
 								<ul class="btns">
 									<li><a class="gradient theme-btn"
 											href="https://bscscan.com/address/0xB25Aba04df6E2DD03B236ae1A025ed21328f2AF8"
-											title="">Contract:
+											title="Contract Address">Contract:
 											0xB25Aba04df6E2DD03B236ae1A025ed21328f2AF8</a></li>
 									<li class="mt-2"><a class="theme-btn blank"
 											href="https://bscscan.com/address/0xeda224345ccfe36f2fa0ae1ad32c474a5beef699"
-											title="">Wallet:
+											title="Wallet Address">Wallet:
 											0xeda224345ccfe36f2fa0ae1ad32c474a5beef699</a></li>
 									<li class="mt-2">
 										<a class="gradient theme-btn" href="mailto:easytripcointech@gmail.com"
-											title="Email us">Email: easytripcointech@gmail.com</a>
+											title="Email">Email: easytripcointech@gmail.com</a>
 									</li>
 									<li class="mt-2"><a class="theme-btn blank" href="https://telegram.me/Easytripcoin"
-											title="">Telegram:
+											title="Telegram">Telegram:
 											Easytripcoin</a></li>
 								</ul>
 							</div>
