--- a/index.html
+++ b/index.html
@@ -78,6 +78,10 @@
 										vacations, accommodations, restaurants, and hotels. Built on the secure BEP20
 										protocol, it ensures fast, secure, and seamless transactions for travelers
 										worldwide.</p>
+									<ul class="btns">
+										<li><a class="gradient theme-btn" href="javascript:void(0)"
+												title="Token Price">1 ETC = 0.00167 USD</a></li>
+									</ul>
 								</div>
 								<p class="text-light">Below is the wallet address where you can send your payment to buy
 									the ETC token. You can also copy the token contract address below to set it up in
@@ -260,7 +264,7 @@
 								</li>
 								<li class="wow fadeIn" data-wow-delay="0.8s">
 									<span>Initial Token Price</span>
-									<p>1 BNB = 50,000 ETC</p>
+									<p>$0.00167</p>
 								</li>
 								<li class="wow fadeIn" data-wow-delay="1.0s">
 									<span>Minimum Purchase</span>
