Initial token price

--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
 								</li>
 								<li class="wow fadeIn" data-wow-delay="0.8s">
 									<span>Initial Token Price</span>
-									<p>$0.00167</p>
+									<p>1 ETC = 0.00167 USD</p>
 								</li>
 								<li class="wow fadeIn" data-wow-delay="1.0s">
 									<span>Minimum Purchase</span>
